# inf122-oblig2

./: oblig2.cabal  sheet-1.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Oblig2.hs
